# Anastasis

./: .gitmodules  README.md
anastasis-0.1.0/contrib/: Makefile.am  Makefile.in  gana-update.sh  gana.sh  pogen.sh  redux.countries.json  redux.de.json  redux.it.json  redux.us.json  redux.xx.json
anastasis-0.1.0/src/backend/: Makefile.am  Makefile.in  anastasis-httpd.c  anastasis-httpd.h  anastasis-httpd_config.c  anastasis-httpd_config.h  anastasis-httpd_mhd.h  anastasis-httpd_policy.c  anastasis-httpd_policy.h  anastasis-httpd_policy_upload.c  anastasis-httpd_terms.c  anastasis-httpd_terms.h  anastasis-httpd_truth.c  anastasis-httpd_truth.h  anastasis-httpd_truth_upload.c  anastasis.conf
anastasis-0.1.0/src/cli/: Makefile.am  Makefile.in  anastasis-cli-redux.c  test_anastasis_reducer_3.conf  test_anastasis_reducer_done_authentication.sh  test_anastasis_reducer_done_policy_review.sh  test_anastasis_reducer_enter_secret.sh  test_anastasis_reducer_recovery_enter_user_attributes.sh  test_iban.sh
anastasis-0.1.0/src/reducer/: Makefile.am  Makefile.in  anastasis_api_backup_redux.c  anastasis_api_recovery_redux.c  anastasis_api_redux.c  anastasis_api_redux.h  validation_CH_AHV.c  validation_CZ_BN.c  validation_DE_SVN.c  validation_DE_TIN.c  validation_IN_AADHAR.c  validation_IT_CF.c  validation_XX_SQUARE.c  validation_XY_PRIME.c
anastasis-0.1.0/src/restclient/: Makefile.am  Makefile.in  anastasis_api_config.c  anastasis_api_curl_defaults.c  anastasis_api_curl_defaults.h  anastasis_api_keyshare_lookup.c  anastasis_api_policy_lookup.c  anastasis_api_policy_store.c  anastasis_api_truth_store.c
anastasis-0.1.0/src/testing/: Makefile.am  Makefile.in  sms_authentication.sh  test_anastasis.c  test_anastasis_api.c  testing_api_cmd_config.c  testing_api_cmd_keyshare_lookup.c  testing_api_cmd_policy_lookup.c  testing_api_cmd_policy_store.c  testing_api_cmd_truth_store.c  testing_api_helpers.c  testing_api_trait_account_priv.c  testing_api_trait_account_pub.c  testing_api_trait_code.c  testing_api_trait_eks.c  testing_api_trait_hash.c  testing_api_trait_payment_secret.c  testing_api_trait_salt.c  testing_api_trait_truth_key.c  testing_api_trait_truth_uuid.c  testing_cmd_challenge_answer.c  testing_cmd_policy_create.c  testing_cmd_recover_secret.c  testing_cmd_secret_share.c  testing_cmd_truth_upload.c  testing_trait_challenge.c  testing_trait_core_secret.c  testing_trait_policy.c  testing_trait_truth.c
anastasis-0.1.0/src/util/: Makefile.am  Makefile.in  anastasis_crypto.c  os_installation.c  test_anastasis_crypto.c
anastasis-g12e1f2b/: .gitignore  .gitmodules  Makefile.am  README  bootstrap  configure.ac
anastasis-g12e1f2b/contrib/: .gitignore  Makefile.am  gen-ts.sh  microhttpd.tag  provider-list.json  redux.al.json  redux.be.json  redux.ch.json  redux.countries.json  redux.cz.json  redux.dk.json  redux.es.json  redux.in.json  redux.jp.json  redux.sk.json  redux.xy.json  update-pp.sh  update-tos.sh
anastasis-g12e1f2b/contrib/gana/: README  format.sh
anastasis-g12e1f2b/contrib/pp/: README  pp.rst
anastasis-g12e1f2b/contrib/remote-reducer/: README.md  remote_reducer.py
anastasis-g12e1f2b/contrib/tos/: .gitignore  README  conf.py  tos.rst
anastasis-g12e1f2b/debian/: .gitignore  anastasis-cli.install  anastasis-httpd.README.Debian  anastasis-httpd.config  anastasis-httpd.install  anastasis-httpd.postinst  anastasis-httpd.postrm  anastasis-httpd.preinst  anastasis-httpd.prerm  anastasis-httpd.service  anastasis-httpd.tmpfiles  changelog  control  copyright  libanastasis-dev.install  libanastasis.install  rules  watch
anastasis-g12e1f2b/debian/po/: POTFILES.in
anastasis-g12e1f2b/debian/source/: options
anastasis-g12e1f2b/debian/upstream/: metadata  signing-key.asc
anastasis-g12e1f2b/doc/: .gitignore  Makefile.am  anastasis-config.1  anastasis-httpd.1  anastasis-reducer.1  brown-paper.css  config.sh  docstyle.css  highlight.pack.js  manual.info  stamp-3  stamp-vti  syntax.texi
anastasis-g12e1f2b/doc/doxygen/: .gitignore
anastasis-g12e1f2b/doc/sphinx/: README  anastasis_reducer_backup.drawio  anastasis_reducer_recovery.drawio  authentication.rst  conf.py  configuration.rst  cryptography.rst  db.rst  fdl-1.3.rst  genindex.rst  global-licensing.rst  index.rst  installation.rst  introduction.rst  manindex.rst  reducer.rst  rest.rst
anastasis-g12e1f2b/doc/system-documentation/: .gitignore  bibliothek.bib  client_architecture.tex  design.tex  glossary.tex  implementation.tex  introduction.tex  related_work.tex  server_architecture.tex  thesis.bbl  thesis.tex
anastasis-g12e1f2b/doc/visualization/: anastasis_visualisation.odg
anastasis-g12e1f2b/po/: ChangeLog  POTFILES.in
anastasis-g12e1f2b/src/authorization/: .gitignore  Makefile.am  anastasis-authorization-email.sh  anastasis-helper-authorization-iban.c  anastasis_authorization_plugin.c  anastasis_authorization_plugin_email.c  anastasis_authorization_plugin_file.c  anastasis_authorization_plugin_iban.c  anastasis_authorization_plugin_post.c  anastasis_authorization_plugin_sms.c  anastasis_authorization_plugin_totp.c  authorization-email.conf  authorization-iban-messages.json  authorization-sms-messages.json  iban.c  iban.h
anastasis-g12e1f2b/src/backend/: anastasis-httpd.c  (+8 more)
anastasis-gtk-0.1.0/: Makefile.am  Makefile.in  README  aclocal.m4  anastasis_gtk_config.h.in  configure  configure.ac
anastasis-gtk-0.1.0/contrib/: Makefile.am  Makefile.in  anastasis_gtk_about_window.glade  anastasis_gtk_about_window.glade.in  anastasis_gtk_auth_add_email.glade  anastasis_gtk_auth_add_iban.glade  anastasis_gtk_auth_add_question.glade  anastasis_gtk_challenge_code.glade  anastasis_gtk_challenge_iban.glade  anastasis_gtk_challenge_question.glade  anastasis_gtk_edit_policy.glade  anastasis_gtk_edit_providers.glade  anastasis_gtk_main_window.glade  anastasis_gtk_open_file_dialog.glade  get_version.sh  pogen.sh
anastasis-gtk-0.1.0/doc/: Makefile.in
anastasis-gtk-0.1.0/pixmaps/: Makefile.in
anastasis-gtk-0.1.0/po/: Makevars  POTFILES.in  anastasis-gtk.pot  de.gmo  de.po
anastasis-gtk-0.1.0/src/: Makefile.in
(+454 files in other folders)
