# This Makefile.am is in the public domain
# Process this file with automake to produce Makefile.in

SUBDIRS = .

pkgdatadir= $(prefix)/share/anastasis/

EXTRA_DIST = \
  $(pkgdata_DATA) \
  pogen.sh \
  uncrustify.cfg \
  uncrustify_precommit \
  gana.sh \
  gana-update.sh \
  microhttpd.tag

pkgdata_DATA = \
  redux.al.json \
  redux.be.json \
  redux.ch.json \
  redux.cz.json \
  redux.de.json \
  redux.dk.json \
  redux.in.json \
  redux.it.json \
  redux.jp.json \
  redux.sk.json \
  redux.us.json \
  redux.xx.json \
  redux.xy.json \
  redux.countries.json \
  provider-list.json
