# This Makefile.am is in the public domain

# SUBDIRS = . doxygen

man_MANS = \
  anastasis-httpd.1 \
  anastasis-helper-authorization-iban.1 \
  anastasis-reducer.1 \
  anastasis.conf.5 \
  anastasis-config.1

info_TEXINFOS = \
  anastasis.texi

EXTRA_DIST = \
 $(info_TEXINFOS) \
 $(man_MANS) \
 anastasis-figures/anastasis-db.png \
 anastasis-figures/anastasis_reducer_backup.png \
 anastasis-figures/anastasis_truth_payment.png \
 anastasis-figures/anastasis_challenge_payment.png \
 anastasis-figures/anastasis_reducer_recovery.png \
 anastasis-figures/anastasis_challengecode.png \
 anastasis-figures/anastasis_truth.png
